[project]
name = "dagster-qcloud-cos"
version = "0.1.0-alpha-6"
description = ""
readme = "README.md"
authors = [
    { name = "YiZixuan", email = "sqkkyzx@qq.com" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx==1.0.0b0",
    "pydantic==2.11.0a2",
    "dagster",
    "cos-python-sdk-v5",
    "watchdog==6.0.0",
    "anyio==4.8.0",
    "docstring-parser==0.16",
    "rx==3.2.0",
    "tzlocal==5.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
