[project]
name = "dagster-qcloud-cos"
version = "0.1.5"
description = "腾讯云对象存储与 Dagster 集成"
readme = "README.md"
authors = [
    { name = "YiZixuan", email = "sqkkyzx@qq.com" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "pydantic",
    "dagster",
    "cos-python-sdk-v5",
    "watchdog",
    "anyio",
    "docstring-parser",
    "rx",
    "tzlocal",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
